test cha,rta on jars